# mvcEduBallBouncing

./: CMakeLists.txt  Main.qml  main.cpp
model/: BallModel.qml  BoxModel.qml  WorldModel.qml
view/: BallView.qml  WorldView.qml
